# autosre

./: .dockerignore  .env.example  .gitignore  AGENTS_ITERATION_LOG.md  BUILD_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DOCS_ITERATION_LOG.md  Dockerfile  FRICTION_FREE_PLAN.md  INTEGRATIONS_ITERATION_LOG.md  LICENSE  MANIFEST.in  MASTER_ITERATION_LOG.md  MVP_PLAN.md  MVP_REPORT.md  OVERNIGHT_MISSION.md  README.md  RELEASE_NOTES.md  RETHINK.md  SKILL.md  SKILLS_ITERATION_LOG.md  VISION.md  config.yaml  demo.py  docker-compose.observability.yml  docker-compose.yaml  docker-compose.yml  install.sh  mcp-clients.json  mcp-config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  skill.yaml
.autosre/scenarios/: deployment-failure.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docker.yml  docs.yml  release.yml  test.yml
agents/: CATALOG.md
agents/capacity-planner/: README.md  agent.yaml  test_capacity_planner.py
agents/cert-checker/: README.md  agent.yaml  test_cert_checker.py
agents/change-detector/: README.md  agent.yaml  test_change_detector.py
agents/chaos-agent/: README.md  agent.yaml  test_chaos_agent.py
agents/cost-anomaly/: README.md  agent.yaml  test_cost_anomaly.py
agents/database-health/: README.md  agent.yaml  test_database_health.py
agents/dependency-checker/: README.md  agent.yaml  test_dependency_checker.py
agents/deploy-validator/: README.md  agent.yaml  test_deploy_validator.py
agents/incident-responder/: README.md  agent.yaml  test_incident_responder.py
agents/log-analyzer/: README.md  agent.yaml  test_log_analyzer.py
agents/pod-crash-handler/: README.md  agent.yaml  test_pod_crash_handler.py
agents/runbook-executor/: README.md  agent.yaml  test_runbook_executor.py
agents/security-scanner/: README.md  agent.yaml  test_security_scanner.py
agents/slo-tracker/: README.md  agent.yaml  test_slo_tracker.py
autosre/: __init__.py  api.py  exceptions.py  logging.py  skills.py  watch.py
autosre/adapters/: __init__.py  kubernetes.py  mcp_adapters.py  prometheus.py  slack.py
autosre/adk_agents/: sre_team.py
autosre/agent/: __init__.py  actor.py  guardrails.py  observer.py  reasoner.py
autosre/agents/: __init__.py  observe.py  orchestrator.py  reason.py
autosre/cli/: __init__.py  main.py
autosre/evals/: __init__.py  framework.py  metrics.py  offline_analyzer.py
autosre/feedback/: __init__.py  learning.py  store.py  tracker.py
autosre/foundation/: __init__.py  changes.py  context_store.py  models.py  ownership.py  runbooks.py  topology.py
autosre/learning/: __init__.py  patterns.py  store.py
autosre/remediation/: manager.py
autosre/sandbox/: __init__.py  chaos.py  cluster.py  observability.py
autosre/security/: audit.py  auth.py  rbac.py
autosre/utils/: prompts.py
autosre/web/: __init__.py  app.py
charts/opensre/: Chart.yaml  README.md  values.yaml
config/: agents.yaml  api_keys.json  grafana-dashboards.yml  prometheus-opensre.yml  prometheus.yml
dashboards/: opensre.json
data/mock/: checkout-incident.json
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  rbac.yaml  secret.yaml  service.yaml
docs/: ADK.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  INTEGRATIONS.md  MCP.md  MCP_CLIENT.md  MCP_INTEGRATION.md  PAGERDUTY.md  PHASE1_REPORT.md  QUICKSTART.md  README.md  RUNBOOKS.md  SECURITY.md  SLACK_SETUP.md  TROUBLESHOOTING.md  VISION.md  api-reference.md  cli-reference.md  getting-started.md  installation.md
docs/agents/: agent-reference.md  overview.md  writing-agents.md
docs/deployment/: docker.md  kubernetes.md  systemd.md
docs/examples/: auto-remediation.md  cost-monitoring.md  incident-response.md
docs/images/: README.md
docs/site/: index.html
docs/skills/: creating-skills.md  kubernetes.md  overview.md  prometheus.md  skill-reference.md  slack.md
examples/: cpu-hog.yaml  crashloop.yaml  memory-hog.yaml  oom-pod.yaml
examples/basic-agent/: README.md  agent.yaml
examples/bookstore/: README.md  catalog-service.yaml  checkout-service.yaml  (+4 more)
manifests/: bookstore-instrumented.yaml  bookstore-servicemonitors.yaml
ollama/: Modelfile  Modelfile.tools  runner.py
opensre/: __init__.py
opensre_core/: __init__.py  api.py  cli.py  config.py  mcp_client.py  mcp_server.py  metrics.py  streaming.py
reports/: bugs-to-fix.md  demo-status.md  fault-scenarios.md  fixes-status.md  infra-status.md  integration-status.md  integration-tests.md  metrics-status.md  scenario-status.md  scenarios-app.md  scenarios-infra.md  scenarios-k8s.md  scenarios-security.md
runbooks/: 5xx-errors.md  cpu-throttling.md  crashloop.md  disk-pressure.md  high-cpu.yaml  high-latency.md  memory-issues.md  network-issues.md  pod-scheduling.md
scripts/: demo.sh
skills/: __init__.py
social/: linkedin-announcement.md  twitter-thread.md
src/: __init__.py  analyzer.py  gatherer.py  main.py  models.py  reporter.py
tests/: __init__.py  conftest.py  test_actor.py  test_audit.py  test_audit_extended.py  test_auth.py  test_changes.py  test_cli.py  test_cli_comprehensive.py  test_cli_integration.py  test_config.py  test_connectors.py  test_context_store.py  test_core.py  test_evals.py  test_evals_comprehensive.py  test_evals_integration.py  test_exceptions_comprehensive.py  test_feedback.py  test_feedback_comprehensive.py  test_github_connector.py  test_guardrails.py  test_kubernetes_connector.py  test_learning.py  test_learning_patterns.py  test_logging.py  test_metrics.py  test_models.py  test_observer.py  test_ownership.py  test_pagerduty_connector.py  test_prometheus_connector.py  test_prometheus_connector_extended.py  test_prompts.py  test_reasoner.py  test_resource_utilization.py  test_runbooks.py  test_sandbox_chaos.py  test_sandbox_comprehensive.py  test_sanitize.py  (+5 more)
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
website/: index.html  landing-page-copy.md
(+549 files in other folders)
