[project]
name = "opensre"
version = "0.1.0"
description = "Open Source AI-Powered Incident Response — Get a Slack rollback analysis at 3 AM, click approve, go back to sleep."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sri Sainath Adusumilli"}
]
requires-python = ">=3.11"
keywords = ["sre", "devops", "kubernetes", "prometheus", "ai", "llm", "observability", "incident-response", "oncall"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    
    # CLI
    "typer>=0.9",
    "rich>=13.0",
    
    # API Server
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    
    # LLM
    "ollama>=0.1",
    "openai>=1.0",
    "anthropic>=0.18",
    
    # Kubernetes
    "kubernetes>=29.0",
    
    # Prometheus
    "prometheus-api-client>=0.5",
    
    # HTTP
    "httpx>=0.26",
    
    # Async
    "asyncio>=3.4",
    
    # Data
    "pandas>=2.0",
    
    # Slack Integration
    "slack-sdk>=3.27",
    
    # RAG (for runbooks)
    "chromadb>=0.4",
    "sentence-transformers>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
opensre = "opensre_core.cli:app"

[project.urls]
Homepage = "https://github.com/srisainath/opensre"
Documentation = "https://opensre.dev"
Repository = "https://github.com/srisainath/opensre"
Issues = "https://github.com/srisainath/opensre/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opensre_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
