[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensre"
version = "0.1.0"
description = "AI-Powered SRE Automation - Incident Investigation, Root Cause Analysis, and Auto-Remediation for Kubernetes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sri Sainath Adusumilli" },
    { name = "OpenSRE Team" }
]
keywords = [
    "sre", "devops", "kubernetes", "incident-response", "observability",
    "prometheus", "mcp", "ai", "llm", "automation", "runbooks"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "kubernetes>=28.0.0",
    "aiohttp>=3.9.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "ollama>=0.1.0",
]
slack = [
    "slack-bolt>=1.18.0",
]
all = [
    "opensre[mcp,llm,slack]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
opensre = "opensre_core.cli:app"

[project.entry-points."mcp.servers"]
opensre = "opensre_core.mcp_server:main"

[project.urls]
Homepage = "https://github.com/srisainath/opensre"
Documentation = "https://opensre.dev/docs"
Repository = "https://github.com/srisainath/opensre"
Issues = "https://github.com/srisainath/opensre/issues"
Changelog = "https://github.com/srisainath/opensre/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["opensre_core"]

[tool.hatch.build.targets.sdist]
include = [
    "opensre_core/",
    "runbooks/",
    "config/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long
    "E402",  # module import not at top
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "B904",  # raise from (verbose for HTTP exceptions)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
