[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosre"
version = "0.1.0"
description = "Open-source AI SRE agent - foundation-first incident investigation, root cause analysis, and auto-remediation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OpenSRE Community" }
]
keywords = [
    "sre", "devops", "kubernetes", "incident-response", "observability",
    "prometheus", "ai", "llm", "automation", "runbooks", "on-call"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "kubernetes>=28.0.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "prometheus-client>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.4.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
]
sandbox = [
    "docker>=7.0.0",
]
all = [
    "autosre[llm,sandbox]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.20.2",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
autosre = "autosre.cli.main:cli"

[project.urls]
Homepage = "https://github.com/opensre/autosre"
Documentation = "https://github.com/opensre/autosre#readme"
Repository = "https://github.com/opensre/autosre"
Issues = "https://github.com/opensre/autosre/issues"

[tool.hatch.build.targets.wheel]
packages = ["autosre"]

[tool.hatch.build.targets.sdist]
include = [
    "autosre/",
    "scenarios/",
    "docs/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
